@@ -1305,6 +1305,7 @@ cl_symbols[] = {
 {KEY_ "BASE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "BLOCK", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "CAPITALIZE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "CATCH", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "CASE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "CIRCLE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "COMPILE-TOPLEVEL", KEYWORD, NULL, -1, OBJNULL},
@@ -1347,6 +1348,7 @@ cl_symbols[] = {
 {KEY_ "IF-DOES-NOT-EXIST", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "IF-EXISTS", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "IF-OUTPUT-EXISTS", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "IGNORE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "IMPORT-FROM", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "INCLUDE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "INHERITED", KEYWORD, NULL, -1, OBJNULL},
@@ -1370,6 +1372,7 @@ cl_symbols[] = {
 {KEY_ "LOCAL",KEYWORD,NULL,-1,OBJNULL},
 {KEY_ "LOCKABLE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "LOAD-TOPLEVEL", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "MASK", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "MISER-WIDTH", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "NAME", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "NAMED", KEYWORD, NULL, -1, OBJNULL},
@@ -1392,6 +1395,7 @@ cl_symbols[] = {
 {KEY_ "PRINT-FUNCTION", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PRINT-OBJECT", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PROBE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "PROCESS", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "RADIX", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "READABLY", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "REHASH-SIZE", KEYWORD, NULL, -1, OBJNULL},
@@ -1417,6 +1421,7 @@ cl_symbols[] = {
 {KEY_ "TEST-NOT", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "TYPE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UNSPECIFIC", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "UNMASK", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UP", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UPCASE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "USE", KEYWORD, NULL, -1, OBJNULL},
