@@ -1305,6 +1305,7 @@ cl_symbols[] = {
 {KEY_ "BASE",NULL},
 {KEY_ "BLOCK",NULL},
 {KEY_ "CAPITALIZE",NULL},
+{KEY_ "CATCH",NULL},
 {KEY_ "CASE",NULL},
 {KEY_ "CIRCLE",NULL},
 {KEY_ "COMPILE-TOPLEVEL",NULL},
@@ -1347,6 +1348,7 @@ cl_symbols[] = {
 {KEY_ "IF-DOES-NOT-EXIST",NULL},
 {KEY_ "IF-EXISTS",NULL},
 {KEY_ "IF-OUTPUT-EXISTS",NULL},
+{KEY_ "IGNORE",NULL},
 {KEY_ "IMPORT-FROM",NULL},
 {KEY_ "INCLUDE",NULL},
 {KEY_ "INHERITED",NULL},
@@ -1370,6 +1372,7 @@ cl_symbols[] = {
 {KEY_ "LOCAL",NULL},
 {KEY_ "LOCKABLE",NULL},
 {KEY_ "LOAD-TOPLEVEL",NULL},
+{KEY_ "MASK",NULL},
 {KEY_ "MISER-WIDTH",NULL},
 {KEY_ "NAME",NULL},
 {KEY_ "NAMED",NULL},
@@ -1392,6 +1395,7 @@ cl_symbols[] = {
 {KEY_ "PRINT-FUNCTION",NULL},
 {KEY_ "PRINT-OBJECT",NULL},
 {KEY_ "PROBE",NULL},
+{KEY_ "PROCESS",NULL},
 {KEY_ "RADIX",NULL},
 {KEY_ "READABLY",NULL},
 {KEY_ "REHASH-SIZE",NULL},
@@ -1417,6 +1421,7 @@ cl_symbols[] = {
 {KEY_ "TEST-NOT",NULL},
 {KEY_ "TYPE",NULL},
 {KEY_ "UNSPECIFIC",NULL},
+{KEY_ "UNMASK",NULL},
 {KEY_ "UP",NULL},
 {KEY_ "UPCASE",NULL},
 {KEY_ "USE",NULL},
